# webcam-filters

./: .dockerignore  Dockerfile  README.rst  default.nix  dockerfile.nix  flake.nix  nixpkgs.nix  poetry.toml  pyproject.toml  webcam_filters.py
.github/: dependabot.yml
.github/workflows/: nix-build.yml  publish-docker-image.yml  publish-package.yaml  update-nix-cache.yaml
docker/: Dockerfile  start.sh
webcam_filters/: __init__.py  __main__.py  click.py  gst.py  main.py  mediapipe.py
webcam_filters/plugins/python/: cv2_boxfilter.py  numpy_where.py  selfie_segmentation.py
