[tool.poetry]
name = "webcam-filters"
version = "0.3.0"
description = "Add filters (background blur, etc) to your webcam on Linux"
license = "GPL-3.0-only"
authors = ["Jashandeep Sohi <jashandeep.s.sohi@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/jashandeep-sohi/webcam-filters"
keywords = ["webcam", "filters", "v4l2", "video-conferencing"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
opencv-contrib-python = "^4.5.3"
mediapipe = "^0.8.6"
click = "^8.0.1"
click-completion = "^0.5.2"
rich = "^10.7.0"
numpy = "^1.21.2"

[tool.poetry.scripts]
webcam-filters = "webcam_filters.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
